# cpugov

./: .gitignore  README.md  cpugov  meson.build  meson_options.txt
.github/workflows/: release-deb.yml  release-flatpak.yml  release-tarball.yml
daemon/: cpugov-daemon.in  cpugov-daemon.systemd.service.in  cpugov_daemon.py  install.sh  io.github.serverket.cpugov.service.in  meson.build
data/: io.github.serverket.cpugov.conf  io.github.serverket.cpugov.desktop  io.github.serverket.cpugov.gschema.xml  io.github.serverket.cpugov.metainfo.xml  io.github.serverket.cpugov.policy  meson.build
debian/: changelog  control  copyright  cpugov-daemon.postinst  cpugov.postrm.debhelper  postinst  postrm  preinst  rules
flatpak/: io.github.serverket.cpugov.yml
po/: LINGUAS  POTFILES.in  es.po  it.po  ja.po  meson.build  pt.po  zh_CN.po
src/: __init__.py  application.py  cpugov-gtk.in  dbus_client.py  main.py  meson.build  window.py
